modified Rmd 	modified:   index.Rmd 	modified:   index.html 	deleted:    files/CV.pdf

--- a/index.Rmd
+++ b/index.Rmd
@@ -11,7 +11,7 @@ infectious diseases. Before that, I worked on models of animal
 vaccination, with an emphasis on understanding the
 benefits of transmissible vaccines. 
 
-CV is [here](files/Zabor_CV_2017_Q4.pdf)
+Click [here](files/CV/Basinski_CV.pdf) for a recent CV. 
 
 ***
 
