--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@
 
 <link rel="stylesheet" href="styles.css" type="text/css">
 
-<img src="images/andrew.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left">
+<img src="images/Me.jpeg" style="width:25%; border:10px solid; margin-right: 20px" align="left">
 
 
 
