Updated CV 	modified:   files/CV/Basinski_CV.pdf 	modified:   files/CV/Basinski_CV.tex 	modified:   index.Rmd 	modified:   index.html 	modified:   site_libs/navigation-1.1/codefolding.js

--- a/files/CV/Basinski_CV.tex
+++ b/files/CV/Basinski_CV.tex
@@ -27,7 +27,7 @@
 \begin{document}
 
 
-{\huge Andrew J. Basinski \hspace{2.5in} August, 2019}
+{\huge Andrew J. Basinski \hspace{2.5in} February, 2020}
 
 \noindent\makebox[\linewidth]{\rule{\linewidth}{0.4pt}}
 
@@ -36,7 +36,9 @@
 \begin{tabularx}{\textwidth}{p{\incellone} p{\incelltwo} p{\incellthree}}
 
   C\textsc{ontact} & \parbox[t]{5 cm}{Andrew Basinski \\ 232 N Lilly st \\ Moscow, ID 83843} & \parbox[t]{8cm}{Phone: 715-252-7270\\
-    Email: abasinski@uidaho.edu} \\ 
+    Email: abasinski@uidaho.edu \\
+    Website: \url{https://54481andrew.github.io/}
+  } \\
 
 \end{tabularx}
 
@@ -64,6 +66,14 @@ E\textsc{ducation} & \parbox[t]{13cm}{{\bf Ph.D., Mathematics} University of Uta
   \parbox[t][0cm]{\cellone}{P\textsc{ublications}} &  \parbox[t][0cm]{12cm}{ 
     \begin{itemize}
 
+    \item Schreiner CL, Nuismer SL, {\bf Basinski AJ}. When to vaccinate a fluctuating wildlife population: is timing everything? Journal of Applied Ecology. 57.2 (2020). 
+
+      \vspace{0.05in}      
+      
+    \item Nuismer SL, Remien CH, {\bf Basinski AJ}, et al. "Bayesian estimation of Lassa virus epidemiological parameters: implications for spillover prevention using wildlife vaccination." bioRxiv (2019)
+
+      \vspace{0.05in}
+      
     \item {\bf Basinski AJ}, Nuismer SL, Remien CH. A little goes a long way: Weak vaccine transmission facilitates oral vaccination campaigns against zoonotic pathogens. PLoS neglected tropical diseases 13.3 (2019).
 
       \vspace{0.05in}
@@ -79,33 +89,25 @@ E\textsc{ducation} & \parbox[t]{13cm}{{\bf Ph.D., Mathematics} University of Uta
     \item Nuismer SL, May RH, {\bf Basinski AJ}, Remien CH. Controlling epidemics with transmissible vaccines. PloS One 13.5 (2018).
 
       \vspace{0.05in}
-      
-    \item {\bf Basinski AJ} et al. Evaluating the promise of recombinant transmissible vaccines. Vaccine (2017).
+     
+    \item {\bf Basinski AJ}, Varrelman TJ, Smithson MW, et al. Evaluating the promise of recombinant transmissible vaccines. Vaccine (2017).
       
     \end{itemize}
   }
 \end{tabularx}
 
 \spa
-\spa
-\spa
-\spa
-\spa
-\spa
-\spa
-\spa
-\spa
-\spa
+
+\newpage
 
 \begin{tabularx}{\textwidth}{p{\cellone} p{\celltwo}}
   \parbox[t][0cm]{\cellone}{P\textsc{ublications} In P\textsc{rogress}} &  \parbox[t][0cm]{12cm}{ 
     \begin{itemize}
+    \item Layman NL, Tuschhoff B, {\bf Basinski AJ}, et al. Suppressing evolution of genetically engineered systems through repeated introduction. Submitted to Evolutionary Applications. 
 
-    \item {\bf Basinski AJ}, Nuismer SL. Forecasting the risk of Lassa from rodent reservoirs across West Africa. In progress. 
+      \vspace{0.05in}
 
-      \vspace{0.05in}      
-           
-    \item Schreiner CL, {\bf Basinski AJ}, Nuismer SL. When to vaccinate a fluctuating wildlife population: is timing everything? Journal of Applied Ecology. Manuscript under review. 
+    \item {\bf Basinski AJ}, Nuismer SL. Bridging the gap: Using reservoir ecology and human sero-surveys to estimate Lassa incidence in West Africa. In progress.
       
     \end{itemize}
   }
@@ -115,10 +117,6 @@ E\textsc{ducation} & \parbox[t]{13cm}{{\bf Ph.D., Mathematics} University of Uta
 \spa
 \spa
 \spa
-\spa
-\spa
-\spa
-
 \begin{tabularx}{\textwidth}{p{\cellone} p{\celltwo} p{\cellthree}}
   \parbox[t][0cm]{\cellone}{C\textsc{onferences}}\\ \\
 
@@ -210,6 +208,8 @@ E\textsc{ducation} & \parbox[t]{13cm}{{\bf Ph.D., Mathematics} University of Uta
     \item \parbox[t]{10cm}{Chris Remien (cremien@uidaho.edu) \\ Office phone: (208) 885-5901 \\ Mathematics, University of Idaho}
 
     \item \parbox[t]{10cm}{Jim Bull (jbull@uidaho.edu) \\ Office phone: (801) 585-6202 \\ Biology, University of Idaho}
+
+    \item \parbox[t]{10cm}{Paul Gessler (jbull@uidaho.edu) \\ Office phone: (208) 885-2595 \\ Natural Resources (GIS), University of Idaho}
       
     \item \parbox[t]{10cm}{Fred Adler (adler@math.utah.edu) \\ Office phone (math): (801) 581-6848 \\ Office phone (biology): (801) 585-6202 \\ Biology and Mathematics, University of Utah}
       
