--- a/index.Rmd
+++ b/index.Rmd
@@ -11,11 +11,10 @@ My background is in mathematical biology. This background has grown
 into experience using dynamical system models that solve applied problems in epidemiology,
 an appreciation for the beauty in mathematics,
 and a growing interest in machine learning. 
-Currently, I use machine learning to forecast the risk of animal-borne 
+Currently, I use machine learning in R and Python to forecast the risk of animal-borne 
 infectious diseases. Before that, I worked on models of animal
 vaccination, with an emphasis on understanding the
-benefits of transmissible vaccines. See below for more details on these
-projects. 
+benefits of transmissible vaccines. See below for details on current and recent projects. 
 
 Click [here](files/CV/Basinski_CV.pdf) for a recent CV. 
 
@@ -27,8 +26,11 @@ Click [here](files/CV/Basinski_CV.pdf) for a recent CV.
 
 ##Lassa Risk Map   
 
-Lassa Fever results in roughly 500000 deaths per year in West Africa, and is caused by an 
-RNA arenavirus with high mutational potential. As a part of the DARPA funded project PREEMPT (PREventing EMerging Pathogenic Threats),  I designed a machine learning framework that is capable of forecasting when and where the risk of Lassa Fever is greatest. The GIF below shows model predictions for recent (as of this writing) months in West Africa. As you can see, the risk of Lassa transmission is predicted to be greatest in December and January, and varies spatially as well. This is important information that will help guide Lassa intervention strategies and subsequent research to regions where the need is greatest. 
+Approximately 40% of new human diseases stem from viruses or bacteria that circulate in wildlife populations. Examples are HIV from chimpanzees, Influenza A from birds, and SARS from bats. In addition, many emerging human diseases originate in low and middle income regions of the world with limited health infrastructure. Consequently, humanity is largely unaware of new emergent infectious diseases until after many humans are impacted (i.e., after a pandemic). In this work, we develop a machine learning framework that is capable of using limited disease data to predict the relative disease risk of a wildlife reservoir to humans.  
+
+We applied our framework to Lassa virus, an RNA arenavirus that primarily circulates in rodent populations of West Africa and causes Lassa Fever when transmitted to humans. Rough estimates indicate that the Lassa virus infects as many as 500000 individuals per year. Though many cases of Lassa Fever are asymptomatic, about 5000 individuals die each year from the disease. Even more worrisome, chance mutations could allow the Lassa virus to better circulate in humans or increase the deadliness of the virus.  
+
+The GIF below shows model predictions for recent (as of this writing) months in West Africa. As you can see, the risk of Lassa transmission is predicted to be greatest in December and January, and varies spatially as well. This is important information that will help guide Lassa intervention strategies and subsequent research to regions where the need is greatest.
 
 <center>
 ![](images/movie_forecast.gif){width=4in}
@@ -38,7 +40,7 @@ The forecasting model consists of different candidate submodels (layers) that ea
 
 \[ \text{Lassa transmission risk} \sim D_L(x) D_R(x) T(t,x)\],
 
-where $D_L(x)$ is the probability of Lassa occuring at spatial position x, $D_R(x)$ gives the probability that the primary rodent reservoir occurs, and $T(t,x)$ describes the seasonal migration of the reservoir. Here, dependence on the spatial coordinate $x$ occurs through weather and land cover predictors from satellite datasets. 
+where $D_L(x)$ is the probability of Lassa occuring at spatial position x, $D_R(x)$ gives the probability that the primary rodent reservoir occurs, and $T(t,x)$ describes the seasonal migration of the reservoir. Here, dependence on the spatial coordinate $x$ occurs through weather and land cover predictors from satellite datasets. This work is in the process of being published. 
 
 <br> <br>
 
@@ -46,8 +48,6 @@ where $D_L(x)$ is the probability of Lassa occuring at spatial position x, $D_R(
 
 <br> <br>
 
-Wildlife vaccination has proven itself an effective means of controlling diseases that can otherwise spread to humans and domestic pets (e.g. Ebola, rabies). Given the success of vaccination campaigns in fox and raccoon populations, it is likely that vaccination will be used on other wildlife as well (e.g. Ebola in gorillas and/or bats, Lassa in rats). From past campaigns on raccoons and fox, we know that vaccinating in the fall generally results in greater vaccine uptake, simply because the most recent juvenile population is developed and foraging at that time. My work with an undergraduate at the University of Idaho uses a mathematical model to predict when the timing of vaccine delivery is important for several reservoirs being considered for vaccination. 
+Wildlife vaccination has proven itself an effective means of controlling diseases that can otherwise spread to humans and domestic pets (e.g. rabies in fox, coyotes, and raccoons). Given the success of vaccination campaigns in fox and raccoon populations, it is likely that vaccination will be used on other wildlife as well (e.g., Ebola in gorillas and/or bats, Lassa in rodents). From past campaigns on raccoons and fox, we know that vaccinating in the fall generally results in greater vaccine uptake, simply because the most recent juvenile population is developed and foraging at that time. My work with an undergraduate at the University of Idaho used a mathematical model to explore how timing of vaccination can influence the outcome of a disease management program in wildlife. Our work was published in the Journal of Applied Ecology (Schreiner, Basinski, 2020), and the associated code is available in <a href = "https://github.com/54481andrew/Vaccinate-a-fluctuating-population"> this github repository
 
 
-
-[//]: # 
