Updated CV 	modified:   files/CV/Basinski_CV.log 	modified:   files/CV/Basinski_CV.pdf 	modified:   files/CV/Basinski_CV.tex 	modified:   files/CV/Basinski_CV.tex~

--- a/files/CV/Basinski_CV.tex
+++ b/files/CV/Basinski_CV.tex
@@ -66,11 +66,15 @@ E\textsc{ducation} & \parbox[t]{13cm}{{\bf Ph.D., Mathematics} University of Uta
   \parbox[t][0cm]{\cellone}{P\textsc{ublications}} &  \parbox[t][0cm]{12cm}{ 
     \begin{itemize}
 
+    \item {\bf Basinski AJ}, Fichet-Calvet, EJ, Sjodin, AR, et al. Bridging the gap: Using reservoir ecology and human sero-surveys to estimate Lassa incidence in West Africa. bioRxiv (2020).
+
+      \vspace{0.05in}      
+      
     \item Schreiner CL, Nuismer SL, {\bf Basinski AJ}. When to vaccinate a fluctuating wildlife population: is timing everything? Journal of Applied Ecology. 57.2 (2020). 
 
       \vspace{0.05in}      
       
-    \item Nuismer SL, Remien CH, {\bf Basinski AJ}, et al. "Bayesian estimation of Lassa virus epidemiological parameters: implications for spillover prevention using wildlife vaccination." bioRxiv (2019)
+    \item Nuismer SL, Remien CH, {\bf Basinski AJ}, et al. Bayesian estimation of Lassa virus epidemiological parameters: implications for spillover prevention using wildlife vaccination. bioRxiv (2019)
 
       \vspace{0.05in}
       
@@ -104,10 +108,6 @@ E\textsc{ducation} & \parbox[t]{13cm}{{\bf Ph.D., Mathematics} University of Uta
   \parbox[t][0cm]{\cellone}{P\textsc{ublications} In P\textsc{rogress}} &  \parbox[t][0cm]{12cm}{ 
     \begin{itemize}
     \item Layman NL, Tuschhoff B, {\bf Basinski AJ}, et al. Suppressing evolution of genetically engineered systems through repeated introduction. Submitted to Evolutionary Applications. 
-
-      \vspace{0.05in}
-
-    \item {\bf Basinski AJ}, Nuismer SL. Bridging the gap: Using reservoir ecology and human sero-surveys to estimate Lassa incidence in West Africa. In progress.
       
     \end{itemize}
   }
