added description of tree classification model, building segmentation 	modified:   index.Rmd 	modified:   index.html 	images/CNN_Building_Segmentation.jpg

--- a/index.Rmd
+++ b/index.Rmd
@@ -24,6 +24,19 @@ Click [here](files/CV/Basinski_CV.pdf) for a recent CV.
 
 \vspace{25in}
 
+## Using machine vision to assess the risk of zoonotic diseases
+
+<br> <br>
+
+<img src="images/CNN_Building_Segmentation.jpg" style="width:75%; border:10px solid; margin-right: 20px" align="top">
+
+Climatic and land cover GIS datasets are valuable for predicting the burden of disease risk in areas that lack proper health surveillance. However, GIS datasets are often too coarse to allow finescale assessment of disease risk within different areas of a single village. Finescale features such as housing quality likely affect zoonotic disease transmission to humans. For example, disease-carrying rodents are better able to gain entry into a thatch hut versus a modern concrete building. 
+
+As part of ongoing work, we are designing a convolutional neural network (CNN) that will "see" local village features directly from aerial imagery. The CNN is constructed using the Keras and tensorflow libraries in python, and performs image segmentation to classify image pixels into discrete categories (i.e., building, rice cultivation, etc.). The CNN will allow local village features to be detected from aerial imagery across West Africa and summarized into statistics (housing density, land area of cultivation) that are meaningful predictors of local zoonotic disease transmission. The image above is a demonstration of our model's ability to detect buildings in a village.  
+
+
+<br> <br>
+
 ## Using machine learning to predict pathogenic threats
 
 The 2020 Covid-19 pandemic is a salient reminder that approximately 40% of new human diseases stem from viruses or bacteria that circulate in wildlife populations. Covid-19 is believed to be transmitted by bats. Other examples are HIV from chimpanzees and Influenza A from birds. Many emerging human diseases originate in low and middle income regions of the world with limited health system infrastructure. Consequently, humanity is largely unaware of new emergent infectious diseases until after many humans are impacted (i.e., after a pandemic). 
@@ -39,6 +52,18 @@ The forecasting model consists of different candidate submodels (layers) that ea
 \[ \text{Lassa transmission risk} \sim D_L(x) D_R(x) T(t,x)\],
 
 where $D_L(x)$ is the probability of Lassa occuring at spatial position x, $D_R(x)$ gives the probability that the primary rodent reservoir occurs, and $T(t,x)$ describes the seasonal migration of the reservoir. Here, dependence on the spatial coordinate $x$ occurs through weather and land cover predictors from satellite datasets. This work is submitted to the Proceedings of the Royal Society B, and available as a [BioRxiv preprint](https://www.biorxiv.org/content/10.1101/2020.03.05.979658v1). Code that is discussed in the manuscript is available in [this github repository](https://github.com/54481andrew/pathogen-spillover-forecast).
+
+<br> <br>
+
+## Using machine vision to identify trees 
+
+<br> <br>
+
+<img src="images/water.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left">
+
+One of my favorite passtimes living in Wisconsin is plant identification -- the plant diversity in Wisconsin is amazing, so you never know what you'll find in some secluded meadow or woodland. This project is a fusion of my love of plant ID and my desire to learn more about machine vision with tensorflow.  The goal was to build a convolutional neural network (CNN) that could identify a tree's species from an image of its bark. This particular challenge was partly motivated by the oncoming fall weather -- tree ID is about to get a lot more difficult as the leaves fall -- and I would like to get better with winter tree ID.  
+
+The project involved collecting an extensive image/species dataset of local trees (30+ hours in the woods) in some beautiful Wisconsin fall weather. The resulting [github repository](https://github.com/54481andrew/tree-bark-cnn) provides the full dataset that I collected, as well as a complete walkthrough of building, training, and evaluating the CNN. This project demonstrates certain key issues in machine learning, including data augmentation, how to handle imbalanced datasets in classification problems, and model selection. 
 
 <br> <br>
 
